文章を考えました
特徴までつくりました

--- a/Chain.html
+++ b/Chain.html
@@ -6,5 +6,29 @@
     <link rel="stylesheet" href="css/Chain.css" />
     <title>チェーン</title>
   </head>
-  <body></body>
+  <body>
+    <img
+    src="https://ichiran.com/img/page/menu-menu_main01.png"></img>
+    <p>一蘭</p>
+    <h1>主なメニュー</h1>
+    <ul>
+    <li>天然豚骨ラーメン</li>
+    <li>替え玉</li>
+    </ul>
+    <p>トッピング</p>
+    <ul>
+    <li>半熟卵</li>
+    <li>チャーシュー</li>
+    <li>ネギ</li>
+    <li>きくらげ</li>
+    </ul>
+    <h2>特徴</h2>
+    <p>一番の特徴は「赤い秘伝のたれ」。独自にブレンドした唐辛子を基本に30数種類の材料を調合し、何昼夜も寝かせ熟成させていて、単なる辛さだけではなく様々な旨味が口の中に広がり、より一層ラーメンが奥深い味になります。
+      また、臭みのない豚骨も人気の理由です。また、席はカウンター型で横と仕切られており、味に集中していただけます </p>
+    <h3>口コミ</h3>
+    <p>Rさん</p>
+    <p>★★★★☆</p>
+    <p>とんこつラーメンがこってりしすぎず、美味しかったです。麺が細麺で食べやすいです。ボリュームは普通かと思います。また、食べたいです。</p>
+    
+  </body>
 </html>
