index.htmlの内容の変更
index.htmlの文章を書いたり、画像を挿入しました
またcssで画像サイズの変更をしました

--- a/index.html
+++ b/index.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/index.css" />
-    <title>チームで作るWebサイト</title>
+    <title>ラーメン屋紹介</title>
   </head>
   <body>
-    <h1>チームで作成するWebサイトです</h1>
-    <p class="red">内容はこれから書きます</p>
+    <div class="contents_side">
+      <a href="Kozin.html">個人店</a> <br />
+      <a href="Chain.html">チェーン店</a>
+    </div>
+    <div class="contents_main">
+      <div class="main_picture">
+        <img
+          src="img/AdobeStock_382430203-scaled.jpeg"
+          alt="ラーメンの画像です"
+          class="index_ramen"
+        />
+        <p>ラーメン屋紹介</p>
+      </div>
+      <p>
+        このサイトは、おすすめのラーメン屋を個人店とチェーン店に分けて紹介します。<br />
+        このサイトはINIAD(東洋大学 情報連携学部
+        情報連携学科)の講義課題として作成されました。
+      </p>
+    </div>
   </body>
 </html>
