画像の変更
ラーメンの画像を差し替えました

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="contents_main">
       <div class="main_picture">
         <img
-          src="img/AdobeStock_382430203-scaled.jpeg"
+          src="img/food_ramen.png"
           alt="ラーメンの画像です"
           class="index_ramen"
         />
