--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="contents_side">
-      <a href="Kozin.html">個人店</a> <br />
+      <a href="individual.html">個人店</a> <br />
       <a href="Chain.html">チェーン店</a>
     </div>
     <div class="contents_main">
