index.html と index.cssの編集
ページにサイドバーを追加しました
画像の上に文字を追加しました
imgフォルダに画像を追加しました(余裕があればスライドショーにします)

--- a/index.html
+++ b/index.html
@@ -7,24 +7,22 @@
     <title>ラーメン屋紹介</title>
   </head>
   <body>
-    <div class="contents_side">
-      <a href="individual.html">個人店</a> <br />
-      <a href="Chain.html">チェーン店</a>
-    </div>
-    <div class="contents_main">
-      <div class="main_picture">
-        <img
-          src="img/food_ramen.png"
-          alt="ラーメンの画像です"
-          class="index_ramen"
-        />
-        <p>ラーメン屋紹介</p>
+    <div class="contents">
+      <div class="contents_side">
+        <a href="individual.html">個人店</a> <br />
+        <a href="Chain.html">チェーン店</a>
       </div>
-      <p>
-        このサイトは、おすすめのラーメン屋を個人店とチェーン店に分けて紹介します。<br />
-        このサイトはINIAD(東洋大学 情報連携学部
-        情報連携学科)の講義課題として作成されました。
-      </p>
+      <div class="contents_main">
+        <div class="main_picture">
+          <img src="img/Ramen_1.jpg" alt="ラーメンの画像です" />
+          <p>ラーメン屋紹介</p>
+        </div>
+        <p>
+          このサイトは、おすすめのラーメン屋を個人店とチェーン店に分けて紹介します。<br />
+          このサイトはINIAD(東洋大学 情報連携学部
+          情報連携学科)の講義課題として作成されました。
+        </p>
+      </div>
     </div>
   </body>
 </html>
