index.htmlと.cssの編集, フォントの追加
レイアウトの変更と色の設定をしました
fontフォルダとフォントファイルを追加しました

--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
           <img src="img/Ramen_1.jpg" alt="ラーメンの画像です" />
           <p>ラーメン屋紹介</p>
         </div>
+        <h1>About</h1>
         <p>
           このサイトは、おすすめのラーメン屋を個人店とチェーン店に分けて紹介します。<br />
-          このサイトはINIAD(東洋大学 情報連携学部
-          情報連携学科)の講義課題として作成されました。
+          このサイトは<a href="https://www.iniad.org/">INIAD</a>(東洋大学
+          情報連携学部 情報連携学科)の講義課題として作成されました。
+        </p>
+        <p>
+          ラーメン屋は個人店とチェーン店それぞれ3つずつの計6つのラーメン屋が紹介されています。<br />
+          気になったお店がございましたら是非足を運んでみてください。
         </p>
       </div>
     </div>
