テキストの色をホバー時に変更
リンク付きの文字をホバーしたときに文字色が変わるようにcssを編集しました

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       <div class="contents_main">
         <div class="main_picture">
           <img src="img/Ramen_1.jpg" alt="ラーメンの画像です" />
-          <p>ラーメン屋紹介</p>
+          <div class="main_title">
+            <p>ラーメン屋紹介</p>
+          </div>
         </div>
         <h1>About</h1>
         <p>
