画像のスライドショーの追加
index.cssを編集して画像スライドショーを追加しました

--- a/index.html
+++ b/index.html
@@ -13,22 +13,50 @@
         <a href="Chain.html">チェーン店</a>
       </div>
       <div class="contents_main">
-        <div class="main_picture">
-          <img src="img/Ramen_1.jpg" alt="ラーメンの画像です" />
+        <div class="main_picture imgFade">
+          <div class="img img_1">
+            <img src="img/Ramen_1.jpg" alt="ラーメンの画像です" />
+          </div>
+          <div class="img img_2">
+            <img src="img/Ramen_2.jpg" alt="ラーメンの画像です" />
+          </div>
+          <div class="img img_3">
+            <img src="img/Ramen_3.jpg" alt="ラーメンの画像です" />
+          </div>
+          <div class="img img_4">
+            <img src="img/Ramen_4.jpg" alt="ラーメンの画像です" />
+          </div>
+          <div class="img img_5">
+            <img src="img/Ramen_5.jpg" alt="ラーメンの画像です" />
+          </div>
+          <div class="img img_6">
+            <img src="img/Ramen_6.jpg" alt="ラーメンの画像です" />
+          </div>
+          <div class="img img_7">
+            <img src="img/Ramen_7.jpg" alt="ラーメンの画像です" />
+          </div>
+          <div class="img img_8">
+            <img src="img/Ramen_8.jpg" alt="ラーメンの画像です" />
+          </div>
+          <div class="img img_9">
+            <img src="img/Ramen_9.jpg" alt="ラーメンの画像です" />
+          </div>
           <div class="main_title">
             <p>ラーメン屋紹介</p>
           </div>
         </div>
-        <h1>About</h1>
-        <p>
-          このサイトは、おすすめのラーメン屋を個人店とチェーン店に分けて紹介します。<br />
-          このサイトは<a href="https://www.iniad.org/">INIAD</a>(東洋大学
-          情報連携学部 情報連携学科)の講義課題として作成されました。
-        </p>
-        <p>
-          ラーメン屋は個人店とチェーン店それぞれ3つずつの計6つのラーメン屋が紹介されています。<br />
-          気になったお店がございましたら是非足を運んでみてください。
-        </p>
+        <div class="main_about">
+          <h1>About</h1>
+          <p>
+            このサイトは、おすすめのラーメン屋を個人店とチェーン店に分けて紹介します。<br />
+            このサイトは<a href="https://www.iniad.org/">INIAD</a>(東洋大学
+            情報連携学部 情報連携学科)の講義課題として作成されました。
+          </p>
+          <p>
+            ラーメン屋は個人店とチェーン店それぞれ3つずつの計6つのラーメン屋が紹介されています。<br />
+            気になったお店がございましたら是非足を運んでみてください。
+          </p>
+        </div>
       </div>
     </div>
   </body>
