レイアウトの調整
index.htmlとcssを編集し、webべーじのレイアウトを整えました

--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
           <div class="img img_1">
             <img src="img/Ramen_1.jpg" alt="ラーメンの画像です" />
           </div>
-          <div class="img img_2">
-            <img src="img/Ramen_2.jpg" alt="ラーメンの画像です" />
-          </div>
           <div class="img img_3">
             <img src="img/Ramen_3.jpg" alt="ラーメンの画像です" />
           </div>
@@ -55,6 +52,10 @@
           <p>
             ラーメン屋は個人店とチェーン店それぞれ3つずつの計6つのラーメン屋が紹介されています。<br />
             気になったお店がございましたら是非足を運んでみてください。
+          </p>
+          <p>
+            ラーメン屋の紹介ページには、それぞれの店のメニューやその価格、また住所や定休日といった情報も載っています。<br />
+            参考になる情報盛りだくさんです！
           </p>
         </div>
       </div>
